--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -29,6 +29,18 @@
     padding: 0.9375rem;
     margin-bottom: 0.3125rem;
     box-sizing: border-box;
+    overflow: hidden;
+  }
+
+  .card-txt {
+    max-width: 85%;
+
+    & > * {
+      display: block;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+    }
   }
 
   .card-title {
